--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EcoSnap</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
@@ -209,7 +208,7 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="logo"><h1>EcoSnap</h1></div>
+      <div class="logo"><h1 style="color: black;">EcoSnap</h1></div>
       <div class="nav-links">
         <a href="mv.html">About</a>
         <a href="signin.html">Login</a>
