--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,9 @@
      Welcome back!
     </h2>
     <p class="text-lg mb-8">
-     Everyday is a chance to make difference. Shape a greener tomorrow.
+     Everyday is a chance to make difference.<br>
+     
+     Shape a greener tomorrow.
     </p>
     <form class="space-y-6">
      <div>
@@ -38,7 +40,7 @@
       </label>
       <div class="flex justify-between items-center">
        <input class="mt-1 block w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-md text-green-200 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-500" id="password" placeholder="Enter Password" type="password"/>
-       <a class="text-sm text-right ml-2" href="#">
+       <a class="text-xs text-left ml-2" href="#">
         forgot password
        </a>
       </div>
@@ -84,7 +86,7 @@
     </p>
    </div>
    <div class="w-full md:w-1/2">
-    <img alt="Large green leaves with white stripes" class="rounded-lg" height="600" src="https://storage.googleapis.com/a1aa/image/XZdESzlRQWVy5b4D1yY0hxePQjycRET6vb2rN-avSsM.jpg" width="600"/>
+    <img src="https://images.rawpixel.com/image_600/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTEyL2hpcHBvdW5pY29ybl9waG90b19vZl9tb25zdGVyYV9sZWF2ZXNfd2FsbHBhcGVyXzYzNGIyYzhiLTEyZjQtNDRiOS04NGM4LTU0YWJmNDFkODY3Nl8xLmpwZw.jpg" alt="New Image" class="rounded-lg mb-4" height="5000"  width="500"/>
    </div>
   </div>
  </body>
