--- a/test.html
+++ b/test.html
@@ -47,24 +47,24 @@
             Contribute to a Cleaner World with 
             <span class="bg-green-500 text-white px-4 rounded-full">EcoSnap</span>
         </h1>
-        <img src="https://storage.googleapis.com/a1aa/image/7zoXfB4n0RLolxpIEq3dQ0O6EItDjL8CvNXmWkD2AtU.jpg" 
-             alt="A large green tree" 
+        <img src="https://media-hosting.imagekit.io//7151daf2beab43bf/65e7792de3a6227f9d795ebf997e172a.png?Expires=1833675584&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=2ccY5-8H33DQmV0wpO9P-AFtFNzYXCr6rwUpAWfqSrNtp9pPQyXEWJne~XlFOtczTsQvU-ykhIC3lJAA6BYyQKK57yuPb8tG32V~-n1RyuMcGv34IEx81gzxN~XZ~sCFgr0DkD~qzYFDxbiHUu7yWow-DqipxNJb-QltHbTgdI39Nj8DUQKRoAKBIAC7P8fOOk6jb21tr8Zf1jxvxdFcpL8U4DAXuBYzLrS6P0zbxrqhf83mfCKJH2JLSMr69JwJBBpsYl6Z7fbeDIEu0rA6f3yN0YfjjLdaZLLjIoYzdXGFwmj12QWY54pCIfN~Jv0hJ0kvPOZokfhj1Q1lErnteQ__" 
+             alt="New Image" 
              class="w-full max-w-md rounded-lg shadow-lg">
     </main>
 
     <!-- Responsibility for Nature -->
     <div class="container mx-auto p-6 text-center">
-        <div class="title text-6xl font-bold mb-4">Responsibility for Nature
+        <div class="title text-6xl font-bold mb-8">Responsibility for Nature
             <span class="bg-green-500 text-white px-4 rounded-full">Begins with Us</span> 
         </div>
-        <div class="upload-section mb-4">
-            <a href="upload.html" class="upload-button bg-green-700 text-white border-2 border-green-700 rounded-full px-6 py-2 inline-flex items-center">
-                Upload Image <i class="fas fa-camera ml-2"></i>
+        <div class="upload-section mb-8">
+            <a href="upload.html" class="upload-button bg-green-700 text-white border-2 border-green-700 rounded-full px-10 py-5 2ccY5-8H33DQmV0wpO9P-AFtFNzYXCr6rwUpAWfqSrNtp9pPQyXEWJne inline-flex items-center">
+                Upload Image <i class="fas fa-camera ml-4"></i>
             </a>
         </div>
-        <div class="how-it-works bg-green-600 text-white p-10 rounded-lg">
-            <h2 class="text-3xl font-bold mb-10">How Does It Work?</h2>
-            <ol class="list-decimal list-inside text-left text-xl">
+        <div class="how-it-works bg-green-600 text-white p-8 w-3/4 max-w-lg mx-auto rounded-lg">
+            <h2 class="text-5xl font-bold mb-10">How Does It Work?</h2>
+            <ol class="list-decimal list-inside flex flex-col items-center text-xl">
                 <li>You report an illegal dump</li>
                 <li>Relevant people get notified</li>
                 <li>Cleaning event is organized</li>
@@ -191,9 +191,33 @@
         </div>
     </div>
 
+    <!-- mv -->
+    <html>
+<head>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-900 flex flex-col items-center justify-center min-h-screen p-4">
+    <div class="text-center mb-8">
+        <h1 class="text-white text-4xl font-bold mb-4">Our Mission</h1>
+        <div class="bg-green-900 text-white p-6 rounded-lg max-w-md mx-auto">
+            <p>To revolutionize waste management by connecting individuals with local waste collectors, ensuring cleaner communities through technology and collective action.</p>
+        </div>
+    </div>
+    <div class="text-center mb-8">
+        <h1 class="text-white text-4xl font-bold mb-4">Our Vision</h1>
+        <div class="bg-green-900 text-white p-6 rounded-lg max-w-md mx-auto">
+            <p>To create a world where waste is efficiently managed, recycling is maximized, and every individual contributes to a sustainable and pollution-free environment.</p>
+        </div>
+    </div>
+</body>
+</html>
+
     <!-- Footer -->
-    <footer class="bg-green-900 text-white">
+    <footer class="bg-green-900 text-white mb-8">
         <div class="w-full bg-green-800 text-center py-2 text-sm">
+            <span class="mx-2">Green The Planet</span>
+            <span class="mx-2">Green The Planet</span>
+            <span class="mx-2">Green The Planet</span>
             <span class="mx-2">Green The Planet</span>
             <span class="mx-2">Green The Planet</span>
             <span class="mx-2">Green The Planet</span>
@@ -221,22 +245,22 @@
                 <a href="#" class="text-white underline mb-6 inline-block">Contact Us <i class="fas fa-arrow-up-right"></i></a>
                 <p class="text-sm">&copy; EcoSnap 2025</p>
             </div>
-            <div class="text-right mt-8 md:mt-0">
+            <div class="text-left mt-8 md:mt-0">
                 <div class="mb-4">
                     <span class="text-lg">01</span>
-                    <a href="#" class="text-2xl ml-4">ABOUT US</a>
+                    <a href="mv.html" class="text-2xl ml-4">ABOUT US</a>
                 </div>
                 <div class="mb-4">
                     <span class="text-lg">02</span>
-                    <a href="#" class="text-2xl ml-4">PROFILE</a>
+                    <a href="user.html" class="text-2xl ml-4">PROFILE</a>
                 </div>
                 <div class="mb-4">
                     <span class="text-lg">03</span>
-                    <a href="#" class="text-2xl ml-4">NEWS</a>
+                    <a href="ranking.html" class="text-2xl ml-4">RANKING</a>
                 </div>
                 <div>
                     <span class="text-lg">04</span>
-                    <a href="#" class="text-2xl ml-4">STATISTICS</a>
+                    <a href="volunteer.html" class="text-2xl ml-4">STATISTICS</a>
                 </div>
             </div>
         </div>
