--- a/signup.html
+++ b/signup.html
@@ -64,6 +64,7 @@
        </label>
       </div>
       <button class="w-full bg-green-500 text-white py-2 rounded-lg font-semibold hover:bg-green-600 transition duration-200">
+      <a class="text-white-500" href="test.html">
        Sign Up
       </button>
      </form>
