--- a/collector.html
+++ b/collector.html
@@ -69,7 +69,7 @@
     </p>
    </div>
    <button class="bg-green-300 text-black px-8 py-2 rounded-full mt-6">
-    Withdraw
+    Redeem
    </button>
   </main>
  </body>
