--- a/volunteer.html
+++ b/volunteer.html
@@ -7,9 +7,9 @@
 </head>
 <body class="bg-gray-900 text-white font-sans">
     <div class="flex justify-center mt-10">
-        <div class="bg-green-300 text-gray-900 text-2xl font-bold py-4 px-8 rounded-full">
-            Be a Volunteer
-        </div>
+            <div class="bg-green-300 text-gray-900 text-2xl font-bold py-4 px-8 rounded-full">
+                <a href="collector.html">Be a Volunteer</a>
+            </div>
     </div>
     <div class="text-center mt-10">
         <h1 class="text-4xl font-semibold">Environmental Impacts</h1>
