--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
      <h2 class="text-2xl mb-6">
       Get Started Now
      </h2>
-     <form>
+     <form action="/signup" method="POST">
       <div class="mb-4">
        <label class="block text-sm font-semibold mb-2" for="name">
         Name
