--- a/user.html
+++ b/user.html
@@ -56,7 +56,7 @@
     </p>
    </div>
    <button class="bg-green-300 text-black py-2 px-8 mt-6 rounded-full">
-    Withdraw
+    Redeem
    </button>
   </div>
  </body>
